--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "repository": "git@github.com:bamlab/bam-lamps.git",
   "author": "sammyt@bam.tech",
   "license": "MIT",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "localtunnel": "^1.8.3",
     "node-hue-api": "^2.4.2",
     "superagent": "^3.8.2"
   }
